--- a/index.html
+++ b/index.html
@@ -3774,7 +3774,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 
 		if (backBtn) {
 			backBtn.disabled = false;              // <= IMPORTANT
-			[backBtn.style](http://backBtn.style).pointerEvents = 'auto')];  // optionnel
+			backBtn.style](http://backBtn.style).pointerEvents = 'auto';  // optionnel
 			backBtn.classList.remove('visible');   // caché au départ
 			backBtn.onclick = () => {
 				const el = window.lastSelectedDiffEl || window.lastSelectedHistoryEl;
