--- a/index.html
+++ b/index.html
@@ -889,8 +889,7 @@
         .comp-change .token.del { box-shadow: inset 0 -0.35em rgba(255,92,92,0.35); border-color: rgba(255,92,92,0.7); text-decoration: none; }
         .comp-change .ctx { color: #8b93a6; display: block; margin-top: 6px; font-size: 12px; }
            /* Bouton retour à la sélection */
-    #backToSelected.visible { display: inline-flex; }
-    #backToSelected:hover { filter: brightness(0.95); }
+		#backToSelected:hover { filter: brightness(0.95); }
     
     /* Fantôme suppression avec parenthèses rouges */
     .del-ghost { display: inline-block; margin: 0 2px; color: #fff; }
@@ -901,7 +900,7 @@
 .comp-change .token { box-shadow: inset 0 -0.35em rgba(34,197,94,0.7); border-color: rgba(34,197,94,1); background: rgba(34,197,94,0.15); }
 mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(34,197,94,0.9); }
     
-    @media (max-width: 1000px) { .comparator-main { grid-template-columns: 1fr; } #backToSelected { right: 12px; bottom: 12px; } }
+    @media (max-width: 1000px) { .comparator-main { grid-template-columns: 1fr; } }
 	/* Bouton Editer compact (barre d'étude) */
 .btn-edit-current {
   background: #667eea;
