--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 		#backToSelected:not(.visible){
 			display: none !important;
 		}
+		#newText{ z-index: 1; }
     </style>
 </head>
 <body onload="checkAuth()">
