--- a/index.html
+++ b/index.html
@@ -3811,6 +3811,11 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 				btn.innerHTML =
 					(ch.added ? '➕ Insertion' : '➖ Suppression') +
 					`<span class="ctx">${escapeHtml(ch.value).slice(0, 80)}</span>`;
+				changesList.innerHTML += `
+					<button class="hist-item ${ch.added ? 'hist-add' : 'hist-del'}">
+						${escapeHtml(ch.label || ch.value || 'Changement')}
+					</button>
+				`;
 
 				btn.onclick = () => {
 			// mémoriser la sélection historique (IMPORTANT: sur window)
