--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,11 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 		#backToSelected:not(.visible){
 			display: none !important;
 		}
+		mark.focused{
+			box-shadow: inset 0 -0.48em rgba(255,209,102,0.9), 0 0 0 2px rgba(255,209,102,0.25) !important;
+			border-color: rgba(255,209,102,0.85) !important;
+			background: rgba(255,209,102,0.2) !important;
+		}
 		#newText{ z-index: 1; }
     </style>
 </head>
