--- a/index.html
+++ b/index.html
@@ -5228,6 +5228,13 @@ function renderChangesListComp(changes) {
         btn.innerHTML = `<span class="type">${emojiFor(c.type)} ${cap(c.type)}</span> ${tokenHtml} ${ctx ? `<span class="ctx">${escapeHtmlComp(ctx)}</span>` : ``}`;
         
         btn.addEventListener('click', () => {
+
+			const target = document.getElementById(btn.dataset.id);
+			if (!target) {
+			// le diff a été recalculé, on le recalcule puis on refait un focus
+				computeComp();
+			}
+			
             const prev = document.querySelector('.comp-change.selected');
             if (prev) prev.classList.remove('selected');
             btn.classList.add('selected');
