--- a/index.html
+++ b/index.html
@@ -5244,6 +5244,7 @@ function renderChangesListComp(changes) {
 				// Ne pas recompute ici : l’utilisateur clique juste sur “Comparer” une fois et ça repart.
 				hintComp.textContent = "Clique d’abord sur « Comparer » (le texte central a été recalculé).";
 				return;
+				computeComp();
 			}
         });
         
