--- a/index.html
+++ b/index.html
@@ -5240,10 +5240,8 @@ function renderChangesListComp(changes) {
             updateBackButton();
 
 			const target = document.getElementById(btn.dataset.id);
-			if (!target) {	
-				// Ne pas recompute ici : l’utilisateur clique juste sur “Comparer” une fois et ça repart.
-				hintComp.textContent = "Clique d’abord sur « Comparer » (le texte central a été recalculé).";
-				return;
+			if (!target) {
+			// le diff a été recalculé, on le recalcule puis on refait un focus
 				computeComp();
 			}
         });
