--- a/index.html
+++ b/index.html
@@ -5090,6 +5090,14 @@ function focusChangeComp(id, type, options) {
     }
     (el.tagName === 'MARK' ? el : document.getElementById(id)).scrollIntoView({behavior:'smooth', block:'center'});
 }
+function escapeHtml(s) {
+	return String(s ?? '')
+		.replace(/&/g, '&amp;')
+		.replace(/</g, '&lt;')
+		.replace(/>/g, '&gt;')
+		.replace(/"/g, '&quot;')
+		.replace(/'/g, '&#039;');
+}
 
 function computeComp() {
 	const oldTxt = oldTA.value || "";
