--- a/index.html
+++ b/index.html
@@ -5941,6 +5941,7 @@ newTA.value = "Le contrat prend effet le 1er janvier 2025.\nLe prix est de 120 â
                 });
 
                 document.getElementById('diffOutput').innerHTML = output;
+					else if (p.removed) out += `<mark class="del">${escapeHtml(p.value)}</mark>`;
                 document.getElementById('insCount').textContent = insCount;
                 document.getElementById('delCount').textContent = delCount;
                 document.getElementById('repCount').textContent = Math.min(insCount, delCount);
