--- a/index.html
+++ b/index.html
@@ -1820,6 +1820,38 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 			background: rgba(255,209,102,0.2) !important;
 			border-radius: 4px;
 		}
+		/* Force le style sur la fiche normale */
+		.card-text {
+    		font-size: 24px;
+    		color: var(--text);
+    		font-weight: 500;
+    		line-height: 1.5;
+    		width: 100%;
+    		text-align: center;
+    /* Force la police système */
+    		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+		}
+
+/* Force tous les éléments à l'intérieur (gras, italique, span copiés) à hériter de la taille et police */
+		.card-text * {
+    		font-family: inherit !important;
+   			font-size: inherit !important;
+		}
+
+/* Force le style sur la fiche plein écran (même taille 24px) */
+		.fullscreen-card-text {
+    		font-size: 24px;
+    		line-height: 1.6;
+    		color: var(--text);
+    		text-align: center;
+    		width: 100%;
+    		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+		}
+
+		.fullscreen-card-text * {
+   			font-family: inherit !important;
+   			font-size: inherit !important;
+		}
     </style>
 </head>
 <body onload="checkAuth()">
