--- a/index.html
+++ b/index.html
@@ -2639,12 +2639,19 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 			const editor = e.target?.closest?.('.editor-content');
 			if (!editor) return;
 
-	// Enter simple -> saut de ligne
-			if (e.key === 'Enter' && !e.shiftKey) {
+	// Laisse les raccourcis clavier tranquilles
+			if (e.ctrlKey || e.metaKey || e.altKey) return;
+
+			if (e.key === 'Enter') {
 				e.preventDefault();
-				document.execCommand('insertHTML', false, '<br>');
+
+		// 1) le plus fiable pour un <br>
+				const ok = document.execCommand('insertLineBreak');
+
+		// 2) fallback si insertLineBreak ne marche pas
+				if (!ok) document.execCommand('insertHTML', false, '<br>');
 			}
-		});
+		}, true);
 
 		function applyColorToSelection(cmd, color) {
 			// 1) Focus sur le bon éditeur
