--- a/index.html
+++ b/index.html
@@ -4257,6 +4257,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 						<button class="editor-btn" type="button" onclick="execFormatCommand('bold')"><b>G</b></button>
 						<button class="editor-btn" type="button" onclick="execFormatCommand('italic')"><i>I</i></button>
 						<button class="editor-btn" type="button" onclick="execFormatCommand('underline')"><u>S</u></button>
+						<button class="editor-btn" type="button" onclick="insertBulletNow()" title="Puce">•</button>
 					</div>
 
 					<div class="format-subtitle">Couleurs</div>
