--- a/index.html
+++ b/index.html
@@ -3596,39 +3596,69 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
         }
 
         function renameList() {
-            const input = document.getElementById('renameListInput');
-            const newName = input.value.trim();
-            if (!newName) {
-                showNotification('Veuillez entrer un nom.', 'error');
-                setTimeout(() => input.focus(), 150);
-                return;
-            }
-            if (!currentCategory || !currentFolder || !categories[currentCategory] || !categories[currentCategory][currentFolder]) {
-                showNotification('Erreur.', 'error');
-                return;
-            }
-            if (categories[currentCategory][currentFolder][newName] && newName !== renameTarget) {
-                showNotification('Ce nom existe déjà.', 'error');
-                input.value = '';
-                setTimeout(() => input.focus(), 150);
-                return;
-            }
-            if (renameTarget && categories[currentCategory][currentFolder][renameTarget]) {
-                categories[currentCategory][currentFolder][newName] = categories[currentCategory][currentFolder][renameTarget];
-                delete categories[currentCategory][currentFolder][renameTarget];
-                if (results[currentCategory] && results[currentCategory][currentFolder] && results[currentCategory][currentFolder][renameTarget]) {
-                    results[currentCategory][currentFolder][newName] = results[currentCategory][currentFolder][renameTarget];
-                    delete results[currentCategory][currentFolder][renameTarget];
-                    saveResults();
-                }
-                if (currentList === renameTarget) currentList = newName;
-                saveData();
-                updateCategoryList();
-                loadListsPage();
-                closeRenameListModal();
-                showNotification('Liste renommée ✓', 'success');
-            }
-        }
+			const input = document.getElementById('renameListInput');
+			const newName = (input?.value || '').trim();
+			if (!newName) return showNotification("Nom de liste vide", "error");
+
+	// On suppose que tu as déjà currentCategory/currentFolder/currentList positionnés
+			const cat = currentCategory;
+			const folder = currentFolder;
+			const oldName = currentList;
+
+			if (!cat || !folder || !oldName) {
+				showNotification("Contexte manquant pour renommer (cat/cours/liste)", "error");
+				return;
+			}
+
+			const listsObj = categories?.[cat]?.[folder];
+			if (!listsObj || typeof listsObj !== "object") {
+				showNotification("Cours introuvable", "error");
+				return;
+			}
+
+			if (!listsObj[oldName]) {
+				showNotification("Liste source introuvable", "error");
+				return;
+			}
+
+			if (newName === oldName) {
+				closeRenameListModal?.();
+				return;
+			}
+
+			if (listsObj[newName] && !confirm(`La liste "${newName}" existe déjà. Remplacer ?`)) return;
+
+	// 1) Déplacer les cartes (le plus important)
+			const cards = listsObj[oldName];          // <-- on garde la référence / le contenu
+			listsObj[newName] = cards;               // <-- nouvelle clé pointe sur les mêmes cartes
+			delete listsObj[oldName];                // <-- on supprime l’ancienne clé
+
+	// 2) Déplacer les résultats (si tu les stockes par nom de liste)
+			if (results?.[cat]?.[folder]?.[oldName] !== undefined) {
+				if (!results[cat]) results[cat] = {};
+				if (!results[cat][folder]) results[cat][folder] = {};
+				results[cat][folder][newName] = results[cat][folder][oldName];
+				delete results[cat][folder][oldName];
+				saveResults?.();
+			}
+
+	// 3) Mettre à jour l'état courant
+			currentList = newName;
+
+	// 4) Persister + UI
+			if (currentUser) {
+				currentUser.folders = categories;
+				allUsers[currentUser.username] = currentUser;
+				localStorage.setItem('flashcards_users', JSON.stringify(allUsers));
+			}
+			saveData();
+			updateCategoryList();
+	// Si tu as une page “lists”, tu peux rappeler son rendu
+	// showListsPage?.(cat, folder);
+
+			closeRenameListModal?.();
+			showNotification("Liste renommée ✓", "success");
+		}
 
         // ====== FONCTIONS D'AFFICHAGE ======
         function escapeHtml(text) {
