--- a/index.html
+++ b/index.html
@@ -3589,6 +3589,23 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 			requestAnimationFrame(tryInject);
 		}
 
+		function showRenameListModal(listName) {
+	// 1) mémoriser la cible
+			renameTarget = {
+				category: currentCategory,
+				folder: currentFolder,
+				list: listName
+			};
+
+	// 2) préremplir l’input
+			const input = document.getElementById('renameListInput');
+			if (input) input.value = listName || '';
+
+	// 3) ouvrir le modal
+			const modal = document.getElementById('renameListModal');
+			if (modal) modal.classList.add('show');
+		}
+
         function closeRenameListModal() {
             document.getElementById('renameListModal').classList.remove('show');
             document.getElementById('renameListInput').value = '';
